2004-08-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/lily.scm (postscript->png): use ~a iso. ~s 

	* ly/property-init.ly (unHideNotes): hide accidentals at staff
	level. Fixes: hideNotes-accidental.ly

2004-08-23  Pedro Kroger  <kroeger@pedrokroeger.net>

	* scm/page-layout.scm (plain-header): fix bug that print page
	number in the first page if firstpagenumber was different than 1.

2004-08-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/framework-ps.scm (define-fonts): use UPCASE for Bluesky
	fonts. Fixes triangle markup for chords.

	* lily/slur-quanting.cc (score_extra_encompass): make score depend
	on distance. This fixes slur-tenuto.ly and slur-tie.ly
 
	* flower/include/interval.hh (T>): add distance() function

	* lily/ottava-bracket.cc (print): add dots to extent. Fixes
	octaviation-dot.ly 

	* lily/context-scheme.cc: ly_context_grob_definition: new function.

	* VERSION (MY_PATCH_LEVEL): release 2.3.12

	* lily/new-slur.cc (add_column): remove set_interface()

2004-08-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/slur-double.ly: new file. 

	* lily/slur-engraver.cc: add doubleSlurs property

	* scm/fret-diagrams.scm (label-fret): use cond instead of case for
	symbols.

	* Documentation/user/notation.itely (Easy Notation note heads):
	revise notation Chapter.

	* ly/music-functions-init.ly (makecluster): add makeClusters music function.

	* lily/part-combine-engraver.cc: rename soloADue ->
	printPartCombineTexts

	* scripts/convert-ly.py (conv): junk script{Up|Down|Both}.

	* lily/horizontal-bracket.cc (print): use
	Tuplet_bracket::make_bracket, so it supports bracket-flare,
	edge-eight and shorten-pair.

2004-08-22  Pedro Kroger  <kroeger@pedrokroeger.net>

	* Documentation/user/changing-defaults.itely (Page layout):
	description of firstpagenumber. Moved @refbugs about rightmargin
	to the end of the section (it was looking like the documentation
	after the refbugs was part of the bug comment).
