@@ -23,7 +23,7 @@ public:
   DECLARE_SCHEME_CALLBACK (print, (SCM));
   DECLARE_SCHEME_CALLBACK (after_line_breaking, (SCM));
   DECLARE_SCHEME_CALLBACK (height, (SCM,SCM));
-
+  DECLARE_SCHEME_CALLBACK (outside_slur_callback, (SCM,SCM));
   static bool has_interface (Grob *);
   static Bezier get_curve (Grob*me);
 };
